--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@
           </a>
 
           <!-- Producto 5 -->
-          <a href="https://web.netperu100.com/cisco/catalyst/C9200L-48P-4G-E.html"
+          <a href="/C9200L-24P-4G-E.html"
             class="group bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 border border-gray-200 hover:border-blue-500">
             <div class="p-5 flex flex-col h-full">
               <div class="flex-grow flex items-center justify-center mb-4 h-40">
@@ -985,7 +985,7 @@
             </div>
           </a>
           <!-- Producto 6 -->
-          <a href="https://web.netperu100.com/cisco/catalyst/C9200L-48T-4X-E.html"
+          <a href="/6-1427200-4.html"
             class="group bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300 border border-gray-200 hover:border-blue-500">
             <div class="p-5 flex flex-col h-full">
               <div class="flex-grow flex items-center justify-center mb-4 h-40">
