--- a/6-1427200-4.html
+++ b/6-1427200-4.html
@@ -581,30 +581,30 @@
             <h2 class="text-2xl font-bold text-gray-800 mb-6 text-center">También Disponible: Soluciones AMP</h2>
             
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-                <a href="#" class="group border rounded-lg p-4 hover:shadow-lg transition flex flex-col items-center text-center">
+                <a href="https://www.ds3comunicaciones.com/satra/SA-300014-6.html" class="group border rounded-lg p-4 hover:shadow-lg transition flex flex-col items-center text-center">
                     <div class="h-40 flex items-center justify-center mb-3">
-                        <img src="https://via.placeholder.com/200x200?text=Jack+RJ45+Cat6" alt="Jack RJ45" class="max-h-full transition group-hover:scale-105">
+                        <img src="img/cat6.jpg" alt="Jack RJ45" class="max-h-full transition group-hover:scale-105">
                     </div>
                     <h3 class="font-bold text-gray-800 text-sm mb-1 group-hover:text-blue-600">Jack Modular Cat 6</h3>
                     <p class="text-xs text-gray-500">Conectores RJ45 tipo Keystone para placa de pared.</p>
                     <span class="text-blue-600 text-sm font-semibold mt-2">Ver Producto</span>
                 </a>
 
-                <a href="#" class="group border rounded-lg p-4 hover:shadow-lg transition flex flex-col items-center text-center">
+                <a href="https://www.ds3comunicaciones.com/panduit/UTPSP10YLY.html" class="group border rounded-lg p-4 hover:shadow-lg transition flex flex-col items-center text-center">
                     <div class="h-40 flex items-center justify-center mb-3">
-                        <img src="https://via.placeholder.com/200x200?text=Patch+Cord+Cat6" alt="Patch Cord" class="max-h-full transition group-hover:scale-105">
+                        <img src="img/cat6_3ft.jpg" alt="Patch Cord" class="max-h-full transition group-hover:scale-105">
                     </div>
                     <h3 class="font-bold text-gray-800 text-sm mb-1 group-hover:text-blue-600">Patch Cord Cat 6 - 3ft</h3>
                     <p class="text-xs text-gray-500">Cable de parcheo certificado de fábrica, varios colores.</p>
                     <span class="text-blue-600 text-sm font-semibold mt-2">Ver Producto</span>
                 </a>
 
-                <a href="#" class="group border rounded-lg p-4 hover:shadow-lg transition flex flex-col items-center text-center">
+                <a href="https://www.ds3comunicaciones.com/AMP/1933321-2.html" class="group border rounded-lg p-4 hover:shadow-lg transition flex flex-col items-center text-center">
                     <div class="h-40 flex items-center justify-center mb-3">
-                        <img src="https://via.placeholder.com/200x200?text=Patch+Panel+24p" alt="Patch Panel" class="max-h-full transition group-hover:scale-105">
+                        <img src="img/panel.jpg" alt="Patch Panel" class="max-h-full transition group-hover:scale-105">
                     </div>
                     <h3 class="font-bold text-gray-800 text-sm mb-1 group-hover:text-blue-600">Patch Panel 24 Puertos</h3>
-                    <p class="text-xs text-gray-500">Panel de parcheo categoría 6 para rack de 19".</p>
+                    <p class="text-xs text-gray-500">Panel de parcheo categoría 6A para rack de 19".</p>
                     <span class="text-blue-600 text-sm font-semibold mt-2">Ver Producto</span>
                 </a>
             </div>
