--- a/u7.html
+++ b/u7.html
@@ -452,19 +452,29 @@
                     <div class="container-img-main">
                         <div class="container-img-main">
                             <div class="w-[400px] h-[400px] overflow-hidden container-img-main flex items-center justify-center">
-                                <img id="img_main" src="img/u7-lite.png" alt=""
+                                <img id="img_main" src="https://www.ds3comunicaciones.com/ubiquiti/images//U7-LITE_front_face.png" alt=""
                                     class="w-[400px] overflow-hidden img-main p-5 cursor-pointer hover:opacity-90 transition duration-200" 
                                     onclick="openMainImageModal(this.src, 'Imagen principal U7-LITE')" />
                             </div>
                             
                             <div class="flex gap-2 pb-3 justify-center">
                                 <div class="w-20 h-20 border p-2 cursor-pointer flex items-center justify-center hover:border-blue-500 transition duration-200">
-                                    <img src="img/u7-lite-lado.png" alt="Vista lateral U7-LITE" 
+                                    <img src="https://www.ds3comunicaciones.com/ubiquiti/images/U7-LITE_front.png" alt="Vista lateral U7-LITE" 
                                         class="overflow-hidden hover:scale-105 transition duration-200" 
                                         onclick="toExchangeImage(this)" />
                                 </div>
                                 <div class="w-20 h-20 border p-2 cursor-pointer flex items-center justify-center hover:border-blue-500 transition duration-200">
-                                    <img src="img/u7-lite-detras.png" alt="Vista trasera U7-LITE" 
+                                    <img src="https://www.ds3comunicaciones.com/ubiquiti/images/U7-LITE_side.png" alt="Vista trasera U7-LITE" 
+                                        class="overflow-hidden hover:scale-105 transition duration-200" 
+                                        onclick="toExchangeImage(this)" />
+                                </div>
+                                <div class="w-20 h-20 border p-2 cursor-pointer flex items-center justify-center hover:border-blue-500 transition duration-200">
+                                    <img src="https://www.ds3comunicaciones.com/ubiquiti/images/U7-LITE_back_2.jpg" alt="Vista trasera U7-LITE" 
+                                        class="overflow-hidden hover:scale-105 transition duration-200" 
+                                        onclick="toExchangeImage(this)" />
+                                </div>
+                                <div class="w-20 h-20 border p-2 cursor-pointer flex items-center justify-center hover:border-blue-500 transition duration-200">
+                                    <img src="https://www.ds3comunicaciones.com/ubiquiti/images/U7-LITE_back_2a.png" alt="Vista trasera U7-LITE" 
                                         class="overflow-hidden hover:scale-105 transition duration-200" 
                                         onclick="toExchangeImage(this)" />
                                 </div>
@@ -507,13 +517,13 @@
                         <div class="mt-3 flex flex-col items-start gap-2">
                             <span class="text-blue-600">Download</span>
 
-                            <a href="files/U7-Lite.pdf"
+                            <a href="https://www.ds3comunicaciones.com/ubiquiti/files/U7-LITE_datasheet.pdf"
                                 class="text-sm font-medium border rounded-md px-3 py-2 hover:bg-gray-100"
                                 target="_blank">
                                 <i class="fa-solid fa-download"></i>
                                 Datos Técnicos
                             </a>
-                            <a href="https://dl.ui.com/qig/u7-lite/#index"
+                            <a href="https://www.ds3comunicaciones.com/ubiquiti/files/U7-LITE_quick.pdf"
                                 class="text-sm font-medium border rounded-md px-3 py-2 hover:bg-gray-100"
                                 target="_blank">
                                 <i class="fa-solid fa-download"></i>
@@ -557,7 +567,7 @@
                 <div class="mt-5 flex gap-5 container-product justify-center flex-wrap container-images none">
                     <div class="flex items-center justify-center w-[350px] h-[300px] border rounded-md overflow-hidden hover:border-blue-500 transition duration-200">
                         <img onclick="openGalleryImageModal(this.src, 'U7-LITE frontal')"
-                            src="img/u7-lite.png" alt="U7-LITE frontal"
+                            src="https://www.ds3comunicaciones.com/ubiquiti/images//U7-LITE_front_face.png" alt="U7-LITE frontal"
                             class="cursor-pointer w-[300px] h-auto block object-contain p-3 hover:scale-105 transition duration-200" />
                     </div>
                     <div class="flex items-center justify-center w-[350px] h-[300px] border rounded-md overflow-hidden hover:border-blue-500 transition duration-200">
@@ -567,12 +577,17 @@
                     </div>
                     <div class="flex items-center justify-center w-[350px] h-[300px] border rounded-md overflow-hidden hover:border-blue-500 transition duration-200">
                         <img onclick="openGalleryImageModal(this.src, 'U7-LITE vista trasera')"
-                            src="img/u7-lite-atras.png" alt="U7-LITE vista trasera"
+                            src="https://www.ds3comunicaciones.com/ubiquiti/images/U7-LITE_back.png" alt="U7-LITE vista trasera"
                             class="cursor-pointer w-[300px] h-auto block object-contain p-3 hover:scale-105 transition duration-200" />
                     </div>
                     <div class="flex items-center justify-center w-[350px] h-[300px] border rounded-md overflow-hidden hover:border-blue-500 transition duration-200">
                         <img onclick="openGalleryImageModal(this.src, 'Caja U7-LITE')"
                             src="img/box.png" alt="Caja U7-LITE"
+                            class="cursor-pointer w-[300px] h-auto block object-contain p-3 hover:scale-105 transition duration-200" />
+                    </div>
+                    <div class="flex items-center justify-center w-[350px] h-[300px] border rounded-md overflow-hidden hover:border-blue-500 transition duration-200">
+                        <img onclick="openGalleryImageModal(this.src, 'Caja U7-LITE abierta')"
+                            src="https://www.ds3comunicaciones.com/ubiquiti/images/U7-LITE_back_2b.jpg" alt="Caja U7-LITE abierta"
                             class="cursor-pointer w-[300px] h-auto block object-contain p-3 hover:scale-105 transition duration-200" />
                     </div>
                     <div class="flex items-center justify-center w-[350px] h-[300px] border rounded-md overflow-hidden hover:border-blue-500 transition duration-200">
