--- a/u7.html
+++ b/u7.html
@@ -505,12 +505,20 @@
                                 </li>
                                 <div class="mt-3 flex gap-2 justify-between  flex items-center">
                                     <a href="https://wa.me/994428965?text=Hola, deseo el modelo U7-Lite"
-                                        class=" bg-blue-600 text-white flex items-center  gap-1 text-sm font-medium border rounded-md px-3 py-2"
+                                        class=" bg-blue-600 text-white flex items-center gap-1 text-sm font-medium border rounded-md px-3 py-2"
                                         target="_blank">
                                         <box-icon color="white" name='cart'></box-icon>
                                         <span class="">Comprar</span>
                                     </a>
                                     <span class="font-medium">$ 129.00 + IGV</span>
+                                </div>
+                                <div class="mt-2">
+                                    <a href="https://wa.me/937514867?text=Hola, deseo cotizar el modelo U7-Lite"
+                                        class="w-full bg-green-600 hover:bg-green-700 text-white flex items-center justify-center gap-1 text-sm font-medium border rounded-md px-3 py-2 transition duration-200"
+                                        target="_blank">
+                                        <box-icon color="white" name='file' type='solid'></box-icon>
+                                        <span>Cotizar</span>
+                                    </a>
                                 </div>
                             </ul>
                         </div>
