--- a/u7.html
+++ b/u7.html
@@ -505,7 +505,7 @@
                                 </li>
                                 <div class="mt-3 flex gap-2 justify-between  flex items-center">
                                     <a href="https://wa.me/994428965?text=Hola, deseo el modelo U7-Lite"
-                                        class="bg-[#f6bb55] hover:bg-[#e0a845] text-white flex items-center gap-1 text-sm font-medium border rounded-md px-3 py-2  transition duration-200"
+                                        class="bg-blue-600 hover:bg-blue-700 text-white flex items-center gap-1 text-sm font-medium border rounded-md px-3 py-2  transition duration-200"
                                         target="_blank">
                                         <box-icon color="white" name='cart'></box-icon>
                                         <span class="">Comprar</span>
