--- a/u7.html
+++ b/u7.html
@@ -504,7 +504,7 @@
                                     - No incluye Inyector PoE (Voltaje 42.5-57V DC)
                                 </li>
                                 <div class="mt-3 flex gap-2 justify-between  flex items-center">
-                                    <a href="https://wa.me/994428965?text=Hola, deseo el modelo U7-Lite"
+                                    <a href="https://wa.me/994428965?text=Hola, deseo comprar el modelo U7-Lite"
                                         class="bg-blue-600 hover:bg-blue-700 text-white flex items-center gap-1 text-sm font-medium border rounded-md px-3 py-2  transition duration-200"
                                         target="_blank">
                                         <box-icon color="white" name='cart'></box-icon>
