--- a/u7.html
+++ b/u7.html
@@ -141,14 +141,26 @@
                     <a href="https://www.ds3comunicaciones.com/ubiquiti/precios_ubiquiti_airfiber_b.html" class="menu-link">
                         airFiber
                     </a>
-                    <a href="https://www.ds3comunicaciones.com/ubiquiti/precios_ubiquiti_unifi_ap_b.html" class="menu-link">
-                        UniFi
+                    <a href="https://www.ds3comunicaciones.com/ubiquiti/precios_ubiquiti_powerbeam_litebeam_b.html" class="menu-link">
+                        PowerBeam
+                    </a>
+                    <a href="https://www.ds3comunicaciones.com/ubiquiti/precios_ubiquiti_rocket_ac_b.html" class="menu-link">
+                        Rocket AC
+                    </a>
+                    <a href="" class="menu-link">
+                        RocketDish
                     </a>
                     <a href="https://www.ds3comunicaciones.com/tplink/switch_16puertos.html" class="menu-link">
                         Switch
                     </a>
                     <a href="https://ds3comunicaciones.com/cisco/precios_cisco_router_b.html" class="menu-link">
                         Router
+                    </a>
+                    <a href="https://www.ds3comunicaciones.com/ubiquiti/precios_ubiquiti_unifi_ap_b.html" class="menu-link">
+                        UniFi
+                    </a>
+                    <a href="" class="menu-link">
+                        Accesorios / Fibra
                     </a>
                 </div>
             </div>
@@ -169,10 +181,30 @@
                             <a href="https://www.ds3comunicaciones.com/amphenol/precios_amphenol.html" target="_blank" class="price-link">
                                 Lista de precios Amphenol
                             </a>
+                            <a href="https://www.ds3comunicaciones.com/andrew/precios_andrew.html" target="_blank" class="price-link">
+                                Lista de precios Andrew
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/apc/precios_apc.html" target="_blank" class="price-link">
+                                Lista de precios APC
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/cisco/precios_cisco.html" target="_blank" class="price-link">
+                                Lista de precios CISCO
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/dlink/precios_dlink.html" target="_blank" class="price-link">
+                                Lista de precios D-Link
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/dixon/precios_dixon.html" target="_blank" class="price-link">
+                                Lista de precios Dixon
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/Energit/precios_energit.html" target="_blank" class="price-link">
+                                Lista de precios Energit
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/FibreFab/precios_fibrefab.html" target="_blank" class="price-link">
+                                Lista de precios Fibra
+                            </a>
                             <a href="https://www.ds3comunicaciones.com/ubiquiti/precios_ubiquiti.html" target="_blank" class="price-link">
                                 Lista de precios Ubiquiti
                             </a>
-                            <!-- Agrega más enlaces según necesites -->
                         </div>
                     </div>
                 </details>
