--- a/u7.html
+++ b/u7.html
@@ -125,39 +125,72 @@
             </button>
         </div>
         <div class="menu-content">
-            <!-- Categorías Principales -->
+            <!-- Marcas Principales -->
             <div class="menu-section">
-                <h3 class="menu-title">Categorías</h3>
+                <h3 class="menu-title">Nuestras Marcas</h3>
                 <div class="menu-links">
                     <a href="https://www.ds3comunicaciones.com/index.html" class="menu-link">
                         <i class="fas fa-home mr-2"></i> Home
                     </a>
-                    <a href="https://www.ds3comunicaciones.com/ubiquiti/precios_ubiquiti_airmax_sector_b.html" class="menu-link">
-                        Antenas airMAX
+                    <a href="https://www.ds3comunicaciones.com/alfa/index.html" class="menu-link">
+                        Alfa
                     </a>
-                    <a href="https://www.ds3comunicaciones.com/ubiquiti/precios_ubiquiti_airfiber_b.html" class="menu-link">
-                        airFiber
+                    <a href="https://www.ds3comunicaciones.com/airlive/index.html" class="menu-link">
+                        Airlive
                     </a>
-                    <a href="https://www.ds3comunicaciones.com/ubiquiti/precios_ubiquiti_powerbeam_litebeam_b.html" class="menu-link">
-                        PowerBeam
+                    <a href="https://www.ds3comunicaciones.com/andrew/index.html" class="menu-link">
+                        Andrew
                     </a>
-                    <a href="https://www.ds3comunicaciones.com/ubiquiti/precios_ubiquiti_rocket_ac_b.html" class="menu-link">
-                        Rocket AC
+                    <a href="https://www.ds3comunicaciones.com/AMP/index.html" class="menu-link">
+                        AMP
                     </a>
-                    <a href="" class="menu-link">
-                        RocketDish
+                    <a href="https://www.ds3comunicaciones.com/amphenol/index.html" class="menu-link">
+                        Amphenol
                     </a>
-                    <a href="https://www.ds3comunicaciones.com/tplink/switch_16puertos.html" class="menu-link">
-                        Switch
+                    <a href="https://www.ds3comunicaciones.com/belden/index.html" class="menu-link">
+                        Belden
                     </a>
-                    <a href="https://ds3comunicaciones.com/cisco/precios_cisco_router_b.html" class="menu-link">
-                        Router
+                    <a href="https://www.ds3comunicaciones.com/cisco/index.html" class="menu-link">
+                        Cisco
                     </a>
-                    <a href="https://www.ds3comunicaciones.com/ubiquiti/precios_ubiquiti_unifi_ap_b.html" class="menu-link">
-                        UniFi
+                    <a href="https://www.ds3comunicaciones.com/dahua/index.html" class="menu-link">
+                        Dahua
                     </a>
-                    <a href="" class="menu-link">
-                        Accesorios / Fibra
+                    <a href="https://www.ds3comunicaciones.com/dlink/index.html" class="menu-link">
+                        D-Link
+                    </a>
+                    <a href="https://www.ds3comunicaciones.com/dixon/index.html" class="menu-link">
+                        Dixon
+                    </a>
+                    <a href="https://www.ds3comunicaciones.com/FibreFab/index.html" class="menu-link">
+                        FibreFab
+                    </a>
+                    <a href="https://www.ds3comunicaciones.com/lanpro/index.html" class="menu-link">
+                        LanPro
+                    </a>
+                    <a href="https://www.ds3comunicaciones.com/l-com/" class="menu-link">
+                        L-Com
+                    </a>
+                    <a href="https://www.ds3comunicaciones.com/mikrotik/index.html" class="menu-link">
+                        MikroTik
+                    </a>
+                    <a href="https://www.ds3comunicaciones.com/panduit/index.html" class="menu-link">
+                        Panduit
+                    </a>
+                    <a href="https://www.ds3comunicaciones.com/satra/index.html" class="menu-link">
+                        Satra
+                    </a>
+                    <a href="https://www.ds3comunicaciones.com/siemon/index.html" class="menu-link">
+                        Siemon
+                    </a>
+                    <a href="https://www.ds3comunicaciones.com/tplink/" class="menu-link">
+                        TP-Link
+                    </a>
+                    <a href="https://www.ds3comunicaciones.com/trendnet/" class="menu-link">
+                        Trendnet
+                    </a>
+                    <a href="https://www.ds3comunicaciones.com/ubiquiti/index.html" class="menu-link">
+                        Ubiquiti
                     </a>
                 </div>
             </div>
