--- a/u7.html
+++ b/u7.html
@@ -125,13 +125,112 @@
             </button>
         </div>
         <div class="menu-content">
-            <!-- Marcas Principales -->
+            <!-- Categorías Principales (como en el original) -->
             <div class="menu-section">
-                <h3 class="menu-title">Nuestras Marcas</h3>
+                <h3 class="menu-title">Categorías</h3>
                 <div class="menu-links">
                     <a href="https://www.ds3comunicaciones.com/index.html" class="menu-link">
                         <i class="fas fa-home mr-2"></i> Home
                     </a>
+                    <a href="https://www.ds3comunicaciones.com/ubiquiti/precios_ubiquiti_airmax_sector_b.html" class="menu-link">
+                        Antenas airMAX
+                    </a>
+                    <a href="https://www.ds3comunicaciones.com/ubiquiti/precios_ubiquiti_airfiber_b.html" class="menu-link">
+                        airFiber
+                    </a>
+                    <a href="https://www.ds3comunicaciones.com/ubiquiti/precios_ubiquiti_powerbeam_litebeam_b.html" class="menu-link">
+                        PowerBeam
+                    </a>
+                    <a href="https://www.ds3comunicaciones.com/ubiquiti/precios_ubiquiti_rocket_ac_b.html" class="menu-link">
+                        Rocket AC
+                    </a>
+                    <a href="https://www.ds3comunicaciones.com/ubiquiti/precios_ubiquiti_rocketdish_b.html" class="menu-link">
+                        RocketDish
+                    </a>
+                    <a href="https://www.ds3comunicaciones.com/tplink/switch_16puertos.html" class="menu-link">
+                        Switch
+                    </a>
+                    <a href="https://ds3comunicaciones.com/cisco/precios_cisco_router_b.html" class="menu-link">
+                        Router
+                    </a>
+                    <a href="https://www.ds3comunicaciones.com/ubiquiti/precios_ubiquiti_unifi_ap_b.html" class="menu-link">
+                        UniFi
+                    </a>
+                    <a href="" class="menu-link">
+                        Accesorios / Fibra
+                    </a>
+                </div>
+            </div>
+
+            <!-- Lista de Precios -->
+            <div class="menu-section">
+                <details class="menu-details">
+                    <summary>
+                        Lista de Precios
+                        <i class="fas fa-chevron-down"></i>
+                    </summary>
+                    <div class="menu-details-content">
+                        <div class="price-list-links">
+                            <a href="https://www.ds3comunicaciones.com/AMP/precios_amp.html" target="_blank" class="price-link">
+                                Lista de precios AMP
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/amphenol/precios_amphenol.html" target="_blank" class="price-link">
+                                Lista de precios Amphenol
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/andrew/precios_andrew.html" target="_blank" class="price-link">
+                                Lista de precios Andrew
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/apc/precios_apc.html" target="_blank" class="price-link">
+                                Lista de precios APC
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/cisco/precios_cisco.html" target="_blank" class="price-link">
+                                Lista de precios CISCO
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/dlink/precios_dlink.html" target="_blank" class="price-link">
+                                Lista de precios D-Link
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/dixon/precios_dixon.html" target="_blank" class="price-link">
+                                Lista de precios Dixon
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/Energit/precios_energit.html" target="_blank" class="price-link">
+                                Lista de precios Energit
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/FibreFab/precios_fibrefab.html" target="_blank" class="price-link">
+                                Lista de precios Fibra
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/hp/precios_hp.html" target="_blank" class="price-link">
+                                Lista de precios HP
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/mikrotik/precios_mikrotik.html" target="_blank" class="price-link">
+                                Lista de precios Mikrotik
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/nexxt_solutions/precios_nexxt_solutions.html" target="_blank" class="price-link">
+                                Lista de precios Nexxt Solutions
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/panduit/precios_panduit.html" target="_blank" class="price-link">
+                                Lista de precios Panduit
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/siemon/precios_siemon.html" target="_blank" class="price-link">
+                                Lista de precios Siemon
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/Teldor/precios_teldor.html" target="_blank" class="price-link">
+                                Lista de precios Teldor
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/trendnet/precios_trendnet.html" target="_blank" class="price-link">
+                                Lista de precios TRENDnet
+                            </a>
+                            <a href="https://www.ds3comunicaciones.com/ubiquiti/precios_ubiquiti.html" target="_blank" class="price-link">
+                                Lista de precios Ubiquiti
+                            </a>
+                        </div>
+                    </div>
+                </details>
+            </div>
+
+            <!-- Marcas (en texto como en el primer código) -->
+            <div class="menu-section">
+                <h3 class="menu-title">Nuestras Marcas</h3>
+                <div class="menu-links">
                     <a href="https://www.ds3comunicaciones.com/alfa/index.html" class="menu-link">
                         Alfa
                     </a>
@@ -193,51 +292,6 @@
                         Ubiquiti
                     </a>
                 </div>
-            </div>
-
-            <!-- Lista de Precios -->
-            <div class="menu-section">
-                <details class="menu-details">
-                    <summary>
-                        Lista de Precios
-                        <i class="fas fa-chevron-down"></i>
-                    </summary>
-                    <div class="menu-details-content">
-                        <div class="price-list-links">
-                            <!-- Solo algunos ejemplos, puedes agregar todos -->
-                            <a href="https://www.ds3comunicaciones.com/AMP/precios_amp.html" target="_blank" class="price-link">
-                                Lista de precios AMP
-                            </a>
-                            <a href="https://www.ds3comunicaciones.com/amphenol/precios_amphenol.html" target="_blank" class="price-link">
-                                Lista de precios Amphenol
-                            </a>
-                            <a href="https://www.ds3comunicaciones.com/andrew/precios_andrew.html" target="_blank" class="price-link">
-                                Lista de precios Andrew
-                            </a>
-                            <a href="https://www.ds3comunicaciones.com/apc/precios_apc.html" target="_blank" class="price-link">
-                                Lista de precios APC
-                            </a>
-                            <a href="https://www.ds3comunicaciones.com/cisco/precios_cisco.html" target="_blank" class="price-link">
-                                Lista de precios CISCO
-                            </a>
-                            <a href="https://www.ds3comunicaciones.com/dlink/precios_dlink.html" target="_blank" class="price-link">
-                                Lista de precios D-Link
-                            </a>
-                            <a href="https://www.ds3comunicaciones.com/dixon/precios_dixon.html" target="_blank" class="price-link">
-                                Lista de precios Dixon
-                            </a>
-                            <a href="https://www.ds3comunicaciones.com/Energit/precios_energit.html" target="_blank" class="price-link">
-                                Lista de precios Energit
-                            </a>
-                            <a href="https://www.ds3comunicaciones.com/FibreFab/precios_fibrefab.html" target="_blank" class="price-link">
-                                Lista de precios Fibra
-                            </a>
-                            <a href="https://www.ds3comunicaciones.com/ubiquiti/precios_ubiquiti.html" target="_blank" class="price-link">
-                                Lista de precios Ubiquiti
-                            </a>
-                        </div>
-                    </div>
-                </details>
             </div>
 
             <!-- Contacto -->
