--- a/u7.html
+++ b/u7.html
@@ -24,7 +24,6 @@
     <!-- Nuevo Header Mejorado para PC -->
     <div class="new-header">
         <div class="header-container">
-                        <!-- Desktop Version - CON BUSCADOR EN EL CENTRO -->
             <div class="desktop-header">
                 <!-- Logo izquierdo -->
                 <div class="logo-section left-logo">
@@ -32,7 +31,11 @@
                          alt="DS3 Comunicaciones" 
                          class="main-logo">
                 </div>
-
+                <div class="ubiquiti-logo-center">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/7/71/Ubiquiti_Logo.png" 
+                             alt="Ubiquiti" 
+                             class="ubiquiti-logo">
+                    </div>
                 <!-- BUSCADOR EN EL CENTRO -->
                 <div class="search-center-container">
                     <form name="form1" method="get" action="https://www.ds3comunicaciones.com/find.html" 
@@ -50,26 +53,28 @@
 
                 <!-- Información de Contacto a la derecha -->
                 <div class="contact-info-right">
-                    <!-- Logo Ubiquiti a la derecha -->
-                    <div class="ubiquiti-logo-center">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/7/71/Ubiquiti_Logo.png" 
-                             alt="Ubiquiti" 
-                             class="ubiquiti-logo">
-                    </div>
                     <!-- Teléfonos y email -->
                     <div class="contact-main-info">
                         <div class="contact-numbers">
                             <div class="contact-phone-item">
                                 <i class="fas fa-phone-alt contact-icon-small"></i>
-                                <span class="phone-number">994-428-965</span>
+                                <span class="phone-number">533-4339</span>
+                                <span class="phone-number">|</span>
+                                <span class="phone-number">937-514-867</span>
                             </div>
                             <div class="contact-phone-item">
                                 <i class="fas fa-phone-alt contact-icon-small"></i>
-                                <span class="phone-number">996-533-223</span>
+                                <span class="phone-number">99653-3223</span>
+                                <span class="phone-number">|</span>
+                                <span class="phone-number">994-428-965</span>
                             </div>
                             <div class="contact-email-item">
                                 <i class="fas fa-envelope contact-icon-small"></i>
                                 <span class="email-text">netperu100@hotmail.com</span>
+                            </div>
+                            <div class="contact-email-item">
+                                <i class="fas fa-globe-americas contact-icon-small"></i>
+                                <span class="email-text">Lima, Perú</span>
                             </div>
                         </div>
                     </div>
