--- a/u7-b.html
+++ b/u7-b.html
@@ -24,6 +24,7 @@
     <!-- Nuevo Header Mejorado para PC -->
     <div class="new-header">
         <div class="header-container">
+            <!-- PC Version -->
             <div class="desktop-header">
                 <!-- Logo izquierdo -->
                 <div class="logo-section left-logo">
@@ -31,11 +32,6 @@
                          alt="DS3 Comunicaciones" 
                          class="main-logo">
                 </div>
-                <div class="ubiquiti-logo-center">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/7/71/Ubiquiti_Logo.png" 
-                             alt="Ubiquiti" 
-                             class="ubiquiti-logo">
-                    </div>
                 <!-- BUSCADOR EN EL CENTRO -->
                 <div class="search-center-container">
                     <form name="form1" method="get" action="https://www.ds3comunicaciones.com/find.html" 
@@ -53,6 +49,11 @@
 
                 <!-- Información de Contacto a la derecha -->
                 <div class="contact-info-right">
+                    <div class="ubiquiti-logo-center">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/7/71/Ubiquiti_Logo.png" 
+                             alt="Ubiquiti" 
+                             class="ubiquiti-logo">
+                    </div>
                     <!-- Teléfonos y email -->
                     <div class="contact-main-info">
                         <div class="contact-numbers">
